# yadma

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO
pub/www/scripts/: yadma.js  yadmaacc.js  yadmadirs.js  yadmasettings.js  yadmautils.js
pub/www/styles/: yadma1.css
yadma/pub/arm-linux/www/: index.htm
yadma/pub/arm-linux/www/scripts/: yadma.js  yadmaacc.js
yadma/src/: CMakeLists.txt  Makefile  main.cpp  objectcontainer.cpp  objectcontainer.h
yadma/src/autenticator/: autenticator.cpp  autenticator.h  iautenticator.h
yadma/src/database/: database.cpp  database.h  database_schema.h  dbquery.cpp  dbquery.h  idatabase.h  idbquery.h
yadma/src/download/: download.cpp  download.h  downloadermanager.cpp  downloadermanager.h  downloadfactory.cpp  downloadfactory.h  getdownloadinfo.cpp  getdownloadinfo.h  idownload.h  idownloadermanager.h  idownloadfactory.h  ilinkresolver.h
yadma/src/pages/: aboutpage.cpp  aboutpage.h  accountspage.cpp  accountspages.h  directoriespages.cpp  directoriespages.h  downloadspage.cpp  downloadspage.h  finishpage.cpp  finishpage.h  indexpage.cpp  indexpage.h  pagedefines.h  settingspage.cpp  settingspage.h  toppage.cpp  toppage.h
yadma/src/settings/: iparameterparser.h  isettings.h  parameterparser.cpp  parameterparser.h  settings.cpp  settings.h
yadma/src/thread/: iwaitsignal.h  mutex.h  thread.cpp  thread.h  waitsignal.cpp  waitsignal.h
yadma/src/util/: pathutil.cpp  pathutil.h  utils.cpp  utils.h  yadmaptr.h
yadma/src/webserver/: iwebserver.h  iwebserverlistener.h  iwebserverlisterner.cpp  mongoose.hpp  webserver.cpp  webserver.h
